hphp/test/slow/traits/require_constraint_nonexistent_if.php.expectf
Fatal error: Class 'X' required to implement interface 'NonExistent' by trait '%s' in %s/test/slow/traits/require_constraint_nonexistent_if.php on line 7